<resources>
    <string name="app_name">Song List</string>
    <string name="star">Stars</string>
    <string name="year_hint">Enter year of release here</string>
    <string name="year">Year</string>
    <string name="singers_hint">Enter singer(s)\' name here</string>
    <string name="singers">Singer(s)</string>
    <string name="title_hint">Enter song title here</string>
    <string name="title">Title</string>
    <string name="insert">Insert</string>
    <string name="show_list">Show List</string>
    <string name="show_5star_songs">Show All 5 star songs</string>
    <string name="add_new_song">Add New Song</string>
    <string name="song_id">Song ID</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="show_all_songs">Show all songs</string>
    <string-array name="spinnerYears">
        <item>2023</item>
        <item>2022</item>
        <item>2021</item>
        <item>2020</item>
        <item>2019</item>
    </string-array>
</resources>